--- a/code/dev/parts/users/editNew.html
+++ b/code/dev/parts/users/editNew.html
@@ -54,7 +54,7 @@
               </div>
             </div>
           </div>
-          <div class="form-group" ng-class="{'has-error': editForm.role.$invalid && editForm.role.$dirty}">
+          <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()" ng-class="{'has-error': editForm.role.$invalid && editForm.role.$dirty}">
             <label for="role" class="col-sm-2 control-label">Role *</label>
             <div class="col-sm-10">
               <select class="form-control inline-block" id="role" name="role" ng-model="model.role" ng-options="role for role in roles" required>
@@ -131,7 +131,7 @@
               </div>
             </div>
           </div>
-          <div class="form-group" ng-class="{'has-error': editForm.domain.$invalid && editForm.domain.$dirty}">
+          <div class="form-group" ng-if="false" ng-class="{'has-error': editForm.domain.$invalid && editForm.domain.$dirty}">
             <label for="domain" class="col-sm-2 control-label">Domains</label>
             <div class="col-sm-10">
               <span ng-show="!_loading && (getAccountsDomainNameList().length==0 && companies.length==0)"><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
