Fixed permisisons related updates on successfull edit, and added role to API keys

--- a/code/dev/parts/groups/edit.html
+++ b/code/dev/parts/groups/edit.html
@@ -55,7 +55,7 @@
             </div>
           </div>
           <hr>
-          <permissions ng-controller="PermissionsController"></permissions>            
+          <permissions pagetype="group" ng-controller="PermissionsController"></permissions>            
           <hr>
           <!-- passwords commented out because of invitation system -->
           <!-- <div class="form-group" ng-class="{'has-error': createForm.password.$invalid && createForm.password.$dirty}">
