--- a/code/dev/parts/users/newWpermissions.html
+++ b/code/dev/parts/users/newWpermissions.html
@@ -137,7 +137,7 @@
             </div>
           </div>
           <hr>
-          <permissions ng-controller="PermissionsController" type="user"></permissions>
+          <permissions pagetype="user" ng-controller="PermissionsController"></permissions>
           <hr>
           <!-- passwords commented out because of invitation system -->
           <!-- <div class="form-group" ng-class="{'has-error': createForm.password.$invalid && createForm.password.$dirty}">
