--- a/code/dev/parts/keys/editNew.html
+++ b/code/dev/parts/keys/editNew.html
@@ -110,9 +110,23 @@
                 </div>
               </div>
             </div>
+            <div class="form-group" ng-if="auth.isRevadmin() || auth.isReseller()" ng-class="{'has-error': editForm.role.$invalid && editForm.role.$dirty}">
+              <label for="role" class="col-sm-2 control-label">Role</label>
+              <div class="col-sm-10">
+                  <select class="form-control inline-block" id="role" name="role" ng-model="key.role" required>
+                      <option ng-repeat="role in roles" value="{{role}}">{{role}}</option>
+                    </select>
+                <label for="group" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Select here the key's role">
+                  <i class="fa fa-question-circle"></i>
+                </label>
+                <div class="error-messages" ng-messages="editForm.role.$error" role="alert" ng-messages-multiple>
+                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                </div>
+              </div>
+            </div>
 
           <hr>
-          <permissions ng-controller="PermissionsController" type="apiKey"></permissions>
+          <permissions pagetype="APIKey" ng-controller="PermissionsController" type="apiKey"></permissions>
           <hr>
 
           <div class="form-group">
