--- a/code/dev/parts/users/editNew.html
+++ b/code/dev/parts/users/editNew.html
@@ -68,10 +68,10 @@
               </div>
             </div>
           </div>
-          <div class="form-group" ng-if="auth.isRevadmin()" ng-init="setGroups()" ng-class="{'has-error': editForm.group.$invalid && editForm.group.$dirty}">
+          <div class="form-group" ng-if="auth.isRevadmin() || auth.isReseller() || auth.isAdmin()" ng-init="setGroups()" ng-class="{'has-error': editForm.group.$invalid && editForm.group.$dirty}">
               <label for="group" class="col-sm-2 control-label">Group</label>
               <div class="col-sm-10">
-                  <select class="form-control inline-block" id="group" name="group" ng-model="model.group" required>
+                  <select class="form-control inline-block" id="group" name="group" ng-model="model.group" ng-change="setPermissions(model.group)" required>
                       <option value="null" selected="selected">--- No Group Selected ---</option>
                       <option ng-repeat="group in groups" value="{{group.id}}">{{group.name}}</option>
                     </select>
