--- a/code/dev/parts/network-ip-blocks/cdn-ip-blocks.tpl.html
+++ b/code/dev/parts/network-ip-blocks/cdn-ip-blocks.tpl.html
@@ -20,7 +20,7 @@
               levels.
             </p>
             <p>
-              If you do utilize an active Intrusion Prevention Service (IPS) and will not while-list the CDN IP blocks there is a high
+              If you do utilize an active Intrusion Prevention Service (IPS) and will not white-list the CDN IP blocks there is a high
               risk that a potentially malicious request originated by one end user will trigger the IPS to block the CDN
               IP addresses effectively disabling origin access for ALL your end users (and causing a service outage for your
               web properties served via the CDN).
