--- a/code/dev/parts/shared/permissions/permissions.html
+++ b/code/dev/parts/shared/permissions/permissions.html
@@ -59,7 +59,7 @@
             <div class="item-list" ng-show="model.permissions.mobile_apps.access">
                 <span ng-show="(_loading || !apps || !apps.length) && model.permissions.mobile_apps.access" class="loader--waite-company">
                     <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-                <ui-select ng-disabled="readOnly" on-select="addItemToList($item, 'mobile_apps')" on-remove="removeItemFromList($item, 'mobile_apps')" multiple
+                <ui-select ng-disabled="readOnly" on-select="addItemToList($select, $item, 'mobile_apps')" on-remove="removeItemFromList($item, 'mobile_apps')" multiple
                     tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-if="apps && apps.length > 0"
                      ng-model="model.apps_list" id="apps_list ">
                     <ui-select-match placeholder="Add a Mobile App to the list...">{{$item.app_name}}</ui-select-match>
@@ -97,7 +97,7 @@
             <div class="item-list" ng-show="model.permissions.domains.access">
                 <span ng-show="(_loading || !domains || !domains.length) && model.permissions.domains.access" class="loader--waite-company">
                     <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-                <ui-select ng-disabled="readOnly" on-select="addItemToList($item, 'domains')" on-remove="removeItemFromList($item, 'domains')" multiple tagging-tokens="SPACE|,"
+                <ui-select ng-disabled="readOnly" on-select="addItemToList($select, $item, 'domains')" on-remove="removeItemFromList($item, 'domains')" multiple tagging-tokens="SPACE|,"
                     theme="bootstrap" class="form-control inline-block" ng-if="domains && domains.length > 0" 
                     ng-model="model.domains_list" id="domains_list ">
                     <ui-select-match placeholder="Add a Domain to the list...">{{$item.domain_name}}</ui-select-match>
@@ -128,7 +128,7 @@
             <div class="item-list" ng-show="model.permissions.cache_purge.access">
                 <span ng-show="(_loading || !domains || !domains.length) && model.permissions.domains.access" class="loader--waite-company">
                     <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-                <ui-select ng-disabled="readOnly" on-select="addItemToList($item, 'cache_purge')" on-remove="removeItemFromList($item, 'cache_purge')" multiple
+                <ui-select ng-disabled="readOnly" on-select="addItemToList($select, $item, 'cache_purge')" on-remove="removeItemFromList($item, 'cache_purge')" multiple
                     tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-if="domains && domains.length > 0"
                      ng-model="model.cache_purge_list" id="cache_purge_list ">
                     <ui-select-match placeholder="Add a Domain to the list...">{{$item.domain_name}}</ui-select-match>
@@ -159,7 +159,7 @@
             <div class="item-list" ng-show="model.permissions.web_analytics.access">
                 <span ng-show="(_loading || !domains || !domains.length) && model.permissions.web_analytics.access" class="loader--waite-company">
                     <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-                <ui-select ng-disabled="readOnly" on-select="addItemToList($item, 'web_analytics')" on-remove="removeItemFromList($item, 'web_analytics')" multiple
+                <ui-select ng-disabled="readOnly" on-select="addItemToList($select, $item, 'web_analytics')" on-remove="removeItemFromList($item, 'web_analytics')" multiple
                     tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-if="domains && domains.length > 0"
                      ng-model="model.web_analytics_list" id="web_analytics_list ">
                     <ui-select-match placeholder="Add a Domain to the list...">{{$item.domain_name}}</ui-select-match>
@@ -190,7 +190,7 @@
             <div class="item-list" ng-show="model.permissions.security_analytics.access">
                 <span ng-show="(_loading || !domains || !domains.length) && model.permissions.security_analytics.access" class="loader--waite-company">
                     <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-                <ui-select ng-disabled="readOnly" on-select="addItemToList($item, 'security_analytics')" on-remove="removeItemFromList($item, 'security_analytics')"
+                <ui-select ng-disabled="readOnly" on-select="addItemToList($select, $item, 'security_analytics')" on-remove="removeItemFromList($item, 'security_analytics')"
                     multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-if="domains && domains.length > 0"
                      ng-model="model.security_analytics_list" id="security_analytics_list ">
                     <ui-select-match placeholder="Add a Domain to the list...">{{$item.domain_name}}</ui-select-match>
@@ -221,7 +221,7 @@
             <div class="item-list" ng-show="model.permissions.dns_zones.access">
                 <span ng-show="(_loading || !dnsZones || !dnsZones.length) && model.permissions.dns_zones.access" class="loader--waite-company">
                     <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-                <ui-select ng-disabled="readOnly" on-select="addItemToList($item, 'dns_zones')" on-remove="removeItemFromList($item, 'dns_zones')" multiple tagging-tokens="SPACE|,"
+                <ui-select ng-disabled="readOnly" on-select="addItemToList($select, $item, 'dns_zones')" on-remove="removeItemFromList($item, 'dns_zones')" multiple tagging-tokens="SPACE|,"
                     theme="bootstrap" class="form-control inline-block" ng-if="dnsZones && dnsZones.length > 0" 
                     ng-model="model.dns_zones_list" id="dns_zones_list ">
                     <ui-select-match placeholder="Add a DNS Zone to the list...">{{$item.zone}}</ui-select-match>
@@ -251,7 +251,7 @@
             <div class="item-list" ng-show="model.permissions.accounts.access">
                 <span ng-show="(_loading || !companies || !companies.length) && model.permissions.accounts.access" class="loader--waite-company">
                     <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-                <ui-select ng-disabled="readOnly" on-select="addItemToList($item, 'accounts')" on-remove="removeItemFromList($item, 'accounts')" multiple tagging-tokens="SPACE|,"
+                <ui-select ng-disabled="readOnly" on-select="addItemToList($select, $item, 'accounts')" on-remove="removeItemFromList($item, 'accounts')" multiple tagging-tokens="SPACE|,"
                     theme="bootstrap" class="form-control inline-block" ng-if="companies && companies.length > 0" 
                     ng-model="model.accounts_list" id="accounts_list">
                     <ui-select-match placeholder="Add an Account to the list...">{{$item.companyName}}</ui-select-match>
