--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -7,7 +7,7 @@
   <div class="panel-menu">
     <ul class="side-menu">
       <dashboard-nav-menu></dashboard-nav-menu>
-      <li ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.apps'}" ng-class="{'open-side-menu-item ': menuExpanded('index.apps'),'active-side-menu-item': $state.includes('index.apps')}">
+      <li ng-if="userService.hasAccessTo('mobile_apps')" ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.apps'}" ng-class="{'open-side-menu-item ': menuExpanded('index.apps'),'active-side-menu-item': $state.includes('index.apps')}">
         <a id="side-menu-apps-item" class="side-menu-item" ng-click="goToState('index.apps.ios')">
           <div class="left-menu-start">
             <i class="fa fa-mobile" style="font-size: 28px; margin-top: -14px !important;"></i>
@@ -25,7 +25,7 @@
             <i class="sub-menu-icon fa fa-windows"></i> Windows Mobile
           </a>
       </li>
-      <li ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.mobile'}" ng-class="{'open-side-menu-item': menuExpanded('index.mobile'),'active-side-menu-item': $state.includes('index.mobile')}">
+      <li ng-if="userService.hasAccessTo('mobile_analytics')" ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.mobile'}" ng-class="{'open-side-menu-item': menuExpanded('index.mobile'),'active-side-menu-item': $state.includes('index.mobile')}">
         <a id="side-menu-mobile-analytics-item" class="side-menu-item" ng-click="goToState('index.mobile.traffic')">
           <div class="left-menu-start">
             <i class="fa fa-signal"></i>
@@ -57,22 +57,22 @@
           Web
           <i ng-click="expandMenu('index.webApp', $event)" class="pull-right {{ menuExpanded('index.webApp') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
         </a>
-        <a id="side-menu-sub-item__webApp-domains" ui-sref-active="active" ui-sref="index.webApp.domains" class="side-menu-sub-item">
+        <a ng-if="userService.hasAccessTo('domains')" id="side-menu-sub-item__webApp-domains" ui-sref-active="active" ui-sref="index.webApp.domains" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-list"></i> Domains
           </a>
-        <a id="side-menu-sub-item__webApp-ssl_certs" ui-sref-active="active" ui-sref="index.webApp.ssl_certs" class="side-menu-sub-item">
+        <a ng-if="userService.hasAccessTo('ssl_certs')" id="side-menu-sub-item__webApp-ssl_certs" ui-sref-active="active" ui-sref="index.webApp.ssl_certs" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-certificate"></i> SSL Certificates
           </a>
-        <a id="side-menu-sub-item__webApp-ssl_names" ui-sref-active="active" ui-sref="index.webApp.ssl_names" class="side-menu-sub-item">
+        <a ng-if="userService.hasAccessTo('ssl_names')" id="side-menu-sub-item__webApp-ssl_names" ui-sref-active="active" ui-sref="index.webApp.ssl_names" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-lock"></i> SSL Names
           </a>
-        <a id="side-menu-sub-item__webApp-waf_rules" ui-sref-active="active" ui-sref="index.webApp.waf_rules" class="side-menu-sub-item">
+        <a ng-if="userService.hasAccessTo('waf_rules')" id="side-menu-sub-item__webApp-waf_rules" ui-sref-active="active" ui-sref="index.webApp.waf_rules" class="side-menu-sub-item">
           <i class="sub-menu-icon fa fa-list-alt"></i> WAF Rules
           </a>
         <a id="side-menu-sub-item__webApp-staging-environment" ui-sref-active="active" ui-sref="index.webApp.staging-environment" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-eye"></i> Staging Env.
           </a>
-        <a id="side-menu-sub-item__webApp-cache" ui-sref-active="active" ui-sref="index.webApp.cache" class="side-menu-sub-item">
+        <a ng-if="userService.hasAccessTo('cache_purge')" id="side-menu-sub-item__webApp-cache" ui-sref-active="active" ui-sref="index.webApp.cache" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-trash"></i> Purge Cache
           </a>
         <a ui-sref-active="active" ui-sref="index.webApp.importConfig" class="side-menu-sub-item" ng-if="userService.isRevadmin()">
@@ -83,7 +83,7 @@
         <!--Domains Advanced-->
         <!--</a>-->
       </li>
-      <li ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.reports'}" ng-class="{'open-side-menu-item': menuExpanded('index.reports'),'active-side-menu-item': $state.includes('index.reports')}">
+      <li ng-if="userService.hasAccessTo('web_analytics')" ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.reports'}" ng-class="{'open-side-menu-item': menuExpanded('index.reports'),'active-side-menu-item': $state.includes('index.reports')}">
         <a id="side-menu-web-analytics-item" class="side-menu-item" ng-click="goToState('index.reports.proxy')">
           <div class="left-menu-start">
             <i class="fa fa-line-chart"></i>
@@ -117,7 +117,7 @@
           </a>
       </li>
       <!--Security Analytics -->
-      <li ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.security'}" ng-class="{'open-side-menu-item': menuExpanded('index.security'),'active-side-menu-item': $state.includes('index.security')}">
+      <li ng-if="userService.hasAccessTo('security_analytics')" ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.security'}" ng-class="{'open-side-menu-item': menuExpanded('index.security'),'active-side-menu-item': $state.includes('index.security')}">
         <a id="side-menu-security-analytics-item" class="side-menu-item" ng-click="goToState('index.security.waf_analytics')">
           <div class="left-menu-start">
             <i class="fa fa-shield"></i>
@@ -143,7 +143,7 @@
           DNS Service
           <i ng-click="expandMenu('index.dnsServices', $event)" class="pull-right {{ menuExpanded('index.dnsServices') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
         </a>
-        <a ui-sref-active="active" ui-sref-active-if="{class: 'active', state: 'index.dnsServices.dns_zone_records'}" ui-sref="index.dnsServices.dns_zones" class="side-menu-sub-item">
+        <a ng-if="userService.hasAccessTo('dns_zones')" ui-sref-active="active" ui-sref-active-if="{class: 'active', state: 'index.dnsServices.dns_zone_records'}" ui-sref="index.dnsServices.dns_zones" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-tasks"></i> DNS Zones
           </a>
         <!-- TODO: delete style color: gerey after release module-->
@@ -166,18 +166,18 @@
           Admin
           <i ng-click="expandMenu('index.accountSettings', $event)" class="pull-right {{ menuExpanded('index.accountSettings') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
         </a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.groups" class="side-menu-sub-item" ng-if="userService.isRevadmin()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.groups" class="side-menu-sub-item" ng-if="!userService.isUser() && userService.hasAccessTo('groups')">
             <i class="sub-menu-icon fa fa-users"></i> Groups
           </a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.users" class="side-menu-sub-item" ng-if="!userService.isUser()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.users" class="side-menu-sub-item" ng-if="!userService.isUser() && userService.hasAccessTo('users')">
             <i class="sub-menu-icon fa fa-user"></i> Users
           </a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.companies" class="side-menu-sub-item" ng-if="userService.isReseller() || userService.isRevadmin()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.companies" class="side-menu-sub-item" ng-if="userService.isReseller() || userService.isRevadmin() && userService.hasAccessTo('accounts')">
             <i class="sub-menu-icon fa fa-list-alt"></i> Accounts</a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.keys" class="side-menu-sub-item" ng-if="!userService.isUser()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.keys" class="side-menu-sub-item" ng-if="!userService.isUser() && userService.hasAccessTo('API_keys')">
             <i class="sub-menu-icon fa fa-key"></i> API Keys
           </a>
-        <a ui-sref-active="active" ui-sref="index.accountSettings.logshippers" class="side-menu-sub-item" ng-if="!userService.isUser()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.logshippers" class="side-menu-sub-item" ng-if="!userService.isUser() && userService.hasAccessTo('logshipping_jobs')">
             <i class="sub-menu-icon glyphicon glyphicon-open-file"></i> Log Shipping
           </a>
         <a ui-sref-active="active" ui-sref="index.accountSettings.profile" class="side-menu-sub-item" href="#/profile">
