--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -1,4 +1,30 @@
 <!-- Note that element contain ui-view child page will be added here -->
+<script type="text/ng-template" id="confirmReadOnlyModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Confirm</h3>
+  </div>
+  <div class="modal-body">
+    Are you sure you want to update your own user to Read-Only mode?
+    To revert the change you will need a different user to update your user.
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-success" type="button" ng-click="ok()">OK</button>
+  </div>
+</script>
+<script type="text/ng-template" id="confirmUserDenyAccessModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Confirm</h3>
+  </div>
+  <div class="modal-body">
+    Are you sure you want to restrict access to users for yourself?
+    To revert the change you will need a different user to update your user.
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-success" type="button" ng-click="ok()">OK</button>
+  </div>
+</script>
 <script type="text/ng-template" id="confirmModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Confirm</h3>
