--- a/code/dev/parts/auth/block/user-login-logout.html
+++ b/code/dev/parts/auth/block/user-login-logout.html
@@ -2,7 +2,9 @@
   <li class="user-info top-strip fit" data-ng-if="isAuthorized">
     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
       <strong>{{user.firstname}} {{user.lastname}}</strong>
-      <span>(<em ng-if="userACL.readOnly" id="msg-is-read-only">READ-ONLY </em>{{user.role}})</span>
+      <span>(<em ng-if="isReadOnly()" id="msg-is-read-only">READ-ONLY </em>{{user.role}})</span>
+      |
+      <strong>{{getUserAccount().companyName}}</strong>
       <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
